complete jquery ui

--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -14,26 +14,15 @@
     <!-- Thư Viện TOASTIFY JS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- Thư viện Jquery -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="CSS/style.css">
     <title>iPhone 14</title>
 </head>
 
 <body>
-    <div class="toast">
-        <div class="toast-content">
-            <i class="fa fa-check check"></i>
-
-            <div class="message">
-                <div class="text text-1">Success</div>
-                <div class="text text-2">Your changes has been saved</div>
-            </div>
-        </div>
-        <i class="fa fa-times close"></i>
-
-        <div class="progress"></div>
-    </div>
-
     <!-- HEADER -->
     <header>
         <!-- WELCOME -->
@@ -596,8 +585,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js"
-        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
 
