--- a/index.html
+++ b/index.html
@@ -737,8 +737,10 @@
                     </span>
                     <span class="mt-5">
                         <h5>Tải Ứng Dụng</h5>
-                        <img class="w-25" src="./img/Download_on_the_App_Store_logo.png" alt="">
-                        <img class="w-25" src="./img/R.png" alt="">
+                        <a href="https://www.apple.com/app-store/"><img class="w-25"
+                                src="./img/Download_on_the_App_Store_logo.png" alt=""></a>
+                        <a href="https://play.google.com/store/games?hl=vi&gl=US&pli=1"><img class="w-25"
+                                src="./img/R.png" alt=""></a>
                     </span>
                 </div>
                 <div class="col-6">
