--- a/PRODUCT/iPad.html
+++ b/PRODUCT/iPad.html
@@ -67,37 +67,37 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav justify-content-between w-100">
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link" href="../index.html">
                                     Trang Chủ
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link" href="./iPhone.html">
                                     iPhone
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center active">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1 active">
                                 <a class="nav-link" href="./iPad.html">
                                     iPad
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link" href="./macbook.html">
                                     MacBook
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link" href="./airpods.html">
                                     AirPods
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link" href="./orther.html">
                                     Khác
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
