--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -74,37 +74,37 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav justify-content-between w-100">
-                            <li class="nav-item mx-1 mx-lg-2 text-center active">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1 active">
                                 <a class="nav-link active" href="../index.html">
                                     Trang Chủ
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link active" href="../PRODUCT/iPhone.html">
                                     iPhone
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link active" href="../PRODUCT/iPad.html">
                                     iPad
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link active" href="../PRODUCT/macbook.html">
                                     MacBook
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link active" href="../PRODUCT/airpods.html">
                                     AirPods
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center mb-1">
                                 <a class="nav-link active" href="../PRODUCT/orther.html">
                                     Khác
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
