--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -172,7 +172,7 @@
                         <div class="mb-2 choose__product__version">
                             <h6 class="text-black fw-bold">Lựa chọn phiên bản</h6>
                             <div class="radio-buttons">
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-version" id="phone-version-128GB"
                                             value="128 GB">
@@ -180,7 +180,7 @@
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-version" id="phone-version-256GB"
                                             value="256 GB">
@@ -188,7 +188,7 @@
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-version" id="phone-version-512GB"
                                             value="512 GB">
@@ -196,7 +196,7 @@
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-version" id="phone-version-1024 GB"
                                             value="1024GB">
@@ -209,28 +209,28 @@
                         <div class="mb-4 choose__product__version">
                             <h6 class="text-black fw-bold">Lựa chọn màu sắc</h6>
                             <div class="">
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-color" id="phone-white" value="Black">
                                         <label class="form-check-label" for="phone-white">Black</label>
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-color" id="phone-green" value="Dark">
                                         <label class="form-check-label" for="phone-green">Dark</label>
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-color" id="phone-blue" value="White">
                                         <label class="form-check-label" for="phone-blue">White</label>
                                     </div>
                                     <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
-                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                <div class="version form-check-inline py-1 px-2 rounded-3 mb-3">
                                     <div>
                                         <input type="radio" name="phone-color" id="phone-pink" value="Yellow">
                                         <label class="form-check-label" for="phone-pink">Yellow</label>
