--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <nav class="header__navbar navbar-expand-md navbar-light my-2">
             <div class="wrap">
                 <div class="container-fluid">
-                    <div class="navbar-toggler d-flex border-0">
+                    <div class="navbar-toggler d-flex border-0 align-items-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
