--- a/index.html
+++ b/index.html
@@ -166,21 +166,7 @@
                 <div class="product d-flex my-3"></div>
                 <div class="pagination d-flex justify-content-center align-items-center">
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item pagination-pre">
-                                <button class="page-link mx-2" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </button>
-                            </li>
-                            <li class="page-item pagination-index active"><button class="page-link mx-2">1</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">2</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">3</button></li>
-                            <li class="page-item pagination-next">
-                                <button class="page-link mx-2" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </button>
-                            </li>
-                        </ul>
+                        <ul class="pagination"></ul>
                     </nav>
                 </div>
             </div>
@@ -202,19 +188,7 @@
                 <div class="pagination d-flex justify-content-center align-items-center">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
-                            <li class="page-item pagination-pre">
-                                <button class="page-link mx-2" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </button>
-                            </li>
-                            <li class="page-item pagination-index active"><button class="page-link mx-2">1</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">2</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">3</button></li>
-                            <li class="page-item pagination-next">
-                                <button class="page-link mx-2" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </button>
-                            </li>
+
                         </ul>
                     </nav>
                 </div>
@@ -236,21 +210,7 @@
                 <div class="product d-flex my-3"></div>
                 <div class="pagination d-flex justify-content-center align-items-center">
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item pagination-pre">
-                                <button class="page-link mx-2" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </button>
-                            </li>
-                            <li class="page-item pagination-index active"><button class="page-link mx-2">1</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">2</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">3</button></li>
-                            <li class="page-item pagination-next">
-                                <button class="page-link mx-2" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </button>
-                            </li>
-                        </ul>
+                        <ul class="pagination"></ul>
                     </nav>
                 </div>
             </div>
@@ -271,21 +231,7 @@
                 <div class="product d-flex my-3"></div>
                 <div class="pagination d-flex justify-content-center align-items-center">
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item pagination-pre">
-                                <button class="page-link mx-2" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </button>
-                            </li>
-                            <li class="page-item pagination-index active"><button class="page-link mx-2">1</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">2</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">3</button></li>
-                            <li class="page-item pagination-next">
-                                <button class="page-link mx-2" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </button>
-                            </li>
-                        </ul>
+                        <ul class="pagination"></ul>
                     </nav>
                 </div>
             </div>
@@ -306,21 +252,7 @@
                 <div class="product d-flex my-3"></div>
                 <div class="pagination d-flex justify-content-center align-items-center">
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item pagination-pre">
-                                <button class="page-link mx-2" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </button>
-                            </li>
-                            <li class="page-item pagination-index active"><button class="page-link mx-2">1</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">2</button></li>
-                            <li class="page-item pagination-index"><button class="page-link mx-2">3</button></li>
-                            <li class="page-item pagination-next">
-                                <button class="page-link mx-2" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </button>
-                            </li>
-                        </ul>
+                        <ul class="pagination"></ul>
                     </nav>
                 </div>
             </div>
@@ -429,7 +361,6 @@
     </footer>
 
     <script src="./JS/index.js"></script>
-    <script src="./JS/iPhone.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
