--- a/PRODUCT/orther.html
+++ b/PRODUCT/orther.html
@@ -171,85 +171,8 @@
                     </div>
                 </div>
                 <div class="content__product col-8">
-                    <div class="product row justify-content-center">
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
-                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
-                            <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
-                                        class="w-100"></a>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
-                                        Nam</a></div>
-                                <hr>
-                                <div class="card-text fw-bold">27,390,000 đ</div>
-                            </div>
-                        </div>
+                    <div class="product row justify-content-start">
+
                     </div>
                 </div>
             </div>
@@ -303,6 +226,7 @@
         </div>
     </footer>
     <script src="./js/index.js"></script>
+    <script src="./js/orther.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
