--- a/LOGIN/index.html
+++ b/LOGIN/index.html
@@ -1,46 +1,130 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Enter your description here" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <title>Apple Mart</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-  </script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-  </script>
+    <link href="./css/style.css" rel="stylesheet" />
+    <script type="text/javascript" src="./jquery/index.js"></script>
+  </head>
 
-  <link href="./css/style.css" rel="stylesheet">
-  <script type="text/javascript" src="./jquery/index.js"></script>
-</head>
-
-<body>
-  <div class="container-fluid bg">
-    <div class="row justify-content-center">
-      <div class="col-md-3 col-sm-6 col-xs-12 row-container">
-        <form>
-          <h1>ĐĂNG NHẬP</h1>
-          <div class="form-group">
-            <label for="email">Tên Đăng nhập</label>
-            <input type="email" class="form-control" id="email" placeholder="Nhập email">
-            <p class="emailError"></p>
+  <body>
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img src="images/logo8.jpg" class="img-fluid" alt="" />
           </div>
-          <div class="form-group">
-            <label for="password" class="label">Mật Khẩu</label>
-            <input type="password" class="form-control" id="password" placeholder="Mật Khẩu">
-            <p class="passwordError"></p>
+          <div class="col-lg-7 px-5 pt-5">
+            <h1 class="font-weight-bold py-3">Đăng nhập</h1>
+            <h4>Nhập tài khoản của bạn</h4>
+            <form action="">
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input
+                    type="email"
+                    placeholder="Email - Địa chỉ"
+                    class="form-control my-3 p-4"
+                  />
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input
+                    type="password"
+                    placeholder="******"
+                    class="form-control my-3 p-4"
+                  />
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <button type="button" class="btn1 mt-3 mb-5">
+                    Đăng nhập
+                  </button>
+                </div>
+              </div>
+              <a href="#">Quên mật khẩu?</a>
+              <p>Chưa có tài khoản? <a href="#">Đăng kí</a></p>
+            </form>
           </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="rememberMe">
-            <label class="form-check-label" for="rememberMe">Ghi nhớ</label>
-          </div>
-          <button type="submit" class="btn btn-custom btn-block my-3">Đăng nhập</button>
-        </form>
+        </div>
       </div>
-    </div>
-  </div>
-</body>
+    </section>
 
+    <!-- FOOTER -->
+    <footer>
+      <div class="wrap py-5">
+        <div class="row">
+          <div class="col-6">
+            <h3>AppleMart</h3>
+            <h5 class="pt-3">Liên Hệ</h5>
+            <span class="d-flex py-3">
+              <i class="fa fa-phone me-2"></i>
+              <span>
+                <a href="tel:+84 773-605-741">+84 773-605-741</a>
+                <br />
+                <a href="tel:+84 906-275-018">+84 906-275-018</a>
+              </span>
+            </span>
+            <span class="d-flex py-3">
+              <i class="fa fa-envelope me-2"></i>
+              <span>
+                <a href="mailto:anhtp.22it@vku.udn.vn">anhtp.22it@vku.udn.vn</a>
+                <br />
+                <a href="mailto:huent.22it@vku.udn.vn">huent.22it@vku.udn.vn</a>
+              </span>
+            </span>
+            <span class="mt-5">
+              <h5>Tải Ứng Dụng</h5>
+              <img
+                class="w-25"
+                src="./images/Download_on_the_App_Store_logo.png"
+                alt=""
+              />
+              <img class="w-25" src="./images/R.png" alt="" />
+            </span>
+          </div>
+          <div class="col-6">
+            <h5>Hỗ trợ dịch vụ</h5>
+            <ul>
+              <li><a href="#">Mua hàng trả góp</a></li>
+              <li><a href="#">Hướng dẫn đặt hàng và thanh toán</a></li>
+              <li><a href="#">Tra cứu đơn hàng</a></li>
+              <li><a href="#">Chính sách bảo hành</a></li>
+              <li>
+                <a href="#">Phạm vi, điều khoản trong gói bảo hành mở rộng</a>
+              </li>
+              <li><a href="#">Chính sách bảo mật</a></li>
+              <li><a href="#">Chính sách giải quyết khiếu nại</a></li>
+              <li><a href="#">Điều khoản mua bán hàng hóa</a></li>
+              <li><a href="#">Câu hỏi thường gặp</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
