add account user and admin

--- a/LOGIN/index.html
+++ b/LOGIN/index.html
@@ -32,20 +32,20 @@
         <div class="col-lg-7 px-5 pt-5">
           <h1 class="font-weight-bold py-3">Đăng nhập</h1>
           <h4>Nhập tài khoản của bạn</h4>
-          <form action="">
+          <form action="" id="login-form">
             <div class="form-row">
               <div class="col-lg-7">
-                <input type="email" placeholder="Email - Địa chỉ" class="form-control my-3 p-4" />
+                <input type="mail" placeholder="Email - Địa chỉ" class="form-control my-3 p-4" id="usermail" required />
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-7">
-                <input type="password" placeholder="******" class="form-control my-3 p-4" />
+                <input type="password" placeholder="******" class="form-control my-3 p-4" id="password" required />
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-7">
-                <button type="button" class="btn1 mt-3 mb-5">
+                <button type="button" class="btn1 mt-3 mb-5" id="login-button">
                   Đăng nhập
                 </button>
               </div>
