--- a/PRODUCT/airpods.html
+++ b/PRODUCT/airpods.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./img/apple-logo-thumbai.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/apple-logo-thumbai.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-    <title>Giỏ hàng</title>
+    <title>AirPods</title>
 </head>
 
 <body>
