--- a/LOGIN/index.html
+++ b/LOGIN/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="Description" content="Enter your description here" />
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./img/apple-logo-thumbai.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/apple-logo-thumbai.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
