edit table admin

--- a/ADMIN/index.html
+++ b/ADMIN/index.html
@@ -179,7 +179,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <span class="processing">Đang giao hàng</span>
+                                    <span class="processing">Đang xử lý</span>
                                 </td>
                                 <td class="paid">
                                     <div class="dot rounded-circle d-inline-block"></div>
@@ -229,7 +229,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <span class="successful">Đang giao hàng</span>
+                                    <span class="successful">Giao hàng thành công</span>
                                 </td>
                                 <td class="unpaid">
                                     <div class="dot rounded-circle d-inline-block"></div>
